# chat

./: CMakeLists.txt  Cilent.cpp  MessageJson.cpp  MessageJson.h  MessageQueue.cpp  MessageQueue.h  README.md  Redis.cpp  Redis.h  Send.cpp  Send.h  Server  Server.cpp  Server.h  bug修复日志.md  event_infor.h  json.hpp  main.cpp  note.md  test.cpp  笔记.md
qt/: CMakeLists.txt  client.cpp  client.h  client.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  register.cpp  register.h  register.ui  socket.cpp  socket.h  tcp.cpp  tcp.h
test/: client.cpp  test.cpp
